Fix dropdown settings overlapping with already selected

--- a/src/app/components/assign-servicii/assign-servicii.component.css
+++ b/src/app/components/assign-servicii/assign-servicii.component.css
@@ -174,4 +174,5 @@
     position:absolute;
     top: 0;
     background-color: var(--card-color);
+    z-index: 2;
 }
